# BerkeleyAIHackathon2026

./: .env.example  .gitignore  ADAM_NOTES.md  AGENTVERSE_DEPLOYMENT.md  AGENTVERSE_DEPLOYMENT_GUIDE.md  AGENT_CHAT_PROTOCOL_FIX.md  AGENT_CHAT_TESTING_GUIDE.md  AGENT_INPUT_OUTPUT_GUIDE.md  AGENT_READMES_SUMMARY.md  ASI_ONE_DEPLOYMENT.md  ASI_ONE_IMPLEMENTATION_SUMMARY.md  ASI_ONE_INTEGRATION_COMPLETE.md  ASI_ONE_QUICK_REFERENCE.md  ASI_ONE_STRIPE_AGENT_INTEGRATION.md  CLAUDE.md  COMPRESSION_AGENT_STATUS.md  COMPRESSION_AGENT_SUMMARY.md  DECISION_AGENT_CHANGES.md  DECISION_AGENT_FINAL_UPDATE.md  DEMO_INPUT_GRAPH_COMPRESSION.md  DEPLOYMENT_CHECKLIST.md  FINAL_SETUP.md  FIX_RAW_GRAPH_INPUT.md  GRAPH_COMPRESSION_COMPLETE.md  GRAPH_VISUALIZATION_GUIDE.md  GRAPH_VISUALIZATION_SUMMARY.md  HOW_TO_RUN_AGENTS.md  MAILBOX_FIX.md  MAILBOX_SETUP.md  NATURAL_LANGUAGE_ORCHESTRATOR.md  ORCHESTRATOR_CHAT_EXAMPLES.md  ORCHESTRATOR_CHAT_PROTOCOL.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  QUICK_START_STRIPE_KALSHI.md  QUICK_TEST_GUIDE.md  README.md  REDIS_INTEGRATION.md  SIMPLE_DEPLOYMENT.md  SIMPLIFIED_AGENTS.md  (+31 more)
agentverse/: AGENT_README.md  agent_wrapper.py
app/: __init__.py  bridge_server.py  config.py  main.py
archived_agents/: COMPRESSION_AGENT_REQUIREMENTS.md  COMPRESSION_OUTPUT_FIX.md  DEMO_INPUT_INTELLIGENT_COMPRESSION.md  INTELLIGENT_COMPRESSION_FINAL.md  INTELLIGENT_COMPRESSION_README.md  QUICKSTART_ADVANCED_COMPRESSION.md  REAL_COMPRESSION_DESIGN.md  REAL_COMPRESSION_FINAL.md  TEST_ESPN_ASI_ONE.md  compression_agent_advanced.py  debug_compression.py  intelligent_compression_agent.py  intelligent_compressor.py  standalone_compression_agent.py  test_espn_compression.py  test_espn_input.json  test_intelligent_compression.py  test_real_compression.py  test_standalone_compression.py
browserbase-agent/: browserbaseResearchAgent.ts  package.json  (+2 more)
(+142 files in other folders)
